# swathe

./: .eslintignore  .prettierrc  LICENSE  README.md  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.js
.github/workflows/: publish.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: effects.ts  image-effects.ts
src/lib/components/: FileUpload.svelte  ImagePreview.svelte  ImageSlider.svelte  Modal.svelte  Settings.svelte  Sidebar.svelte  ViewActionButtons.svelte
src/lib/stores/: effect.ts  image.ts  modal.ts  view.ts
src/lib/utils/: aspect.ts  download.ts  name.ts
src/lib/views/: Comparison.svelte  ComparisonSlider.svelte  Gallery.svelte  Preview.svelte
src/routes/: +page.svelte
src/stores/: effect.ts  image.ts  modal.ts  view.ts
