[package]
name = "swathe"
version = "0.1.0"
description = "A Tauri App"
authors = ["cdrani"]
license = "MIT"
repository = "https://github.com/cdrani/swathe"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
image = "0.24.8"
serde_json = "1.0"
screenshots = "0.7.3"
active-win-pos-rs = "0.8.3"
uuid = { version = "1.7.0", features = [ "v4" ] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "protocol-asset", "dialog-open", "fs-write-file", "path-all", "dialog-save"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
